homework/5.kubernetes-network/redmine/service_redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
